# dev-wallet

./: .gitignore  Cargo.toml  NOTICE  README.md  build.gradle  local.properties.example  settings.gradle
android/: build.gradle
android/src/androidTest/java/one/tesseract/devwallet/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/one/tesseract/devwallet/: Application.kt  MainActivity.kt  UI.kt
android/src/main/java/one/tesseract/devwallet/entity/: KeySettings.kt  TestSettings.kt
android/src/main/java/one/tesseract/devwallet/entity/request/: SubstrateAccount.kt  SubstrateSign.kt  TestError.kt  TestSign.kt
android/src/main/java/one/tesseract/devwallet/interop/: RustObject.kt
android/src/main/java/one/tesseract/devwallet/rust/: Core.kt  KeySettingsProvider.kt  TestSettingsProvider.kt
android/src/main/java/one/tesseract/devwallet/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
android/src/main/java/one/tesseract/devwallet/ui/settings/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
android/src/main/java/one/tesseract/devwallet/ui/settings/home/: HomeFragment.kt  HomeViewModel.kt
android/src/main/java/one/tesseract/devwallet/ui/sign/: SignActivity.kt
android/src/main/java/one/tesseract/devwallet/ui/substrate/: HomeFragment.kt  HomeViewModel.kt
android/src/main/java/one/tesseract/devwallet/ui/test/: TestSettingsFragment.kt  TestSettingsViewModel.kt
android/src/main/java/one/tesseract/devwallet/ui/util/: Signal.kt
android/src/main/res/layout/: activity_main.xml  activity_sign.xml  fragment_dashboard.xml  fragment_home.xml  fragment_key_settings.xml  fragment_substrate_account.xml  fragment_substrate_sign.xml  fragment_test_error.xml  fragment_test_settings.xml  fragment_test_sign.xml
android/src/main/res/menu/: bottom_nav_menu.xml
android/src/main/res/navigation/: mobile_navigation.xml
android/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
android/src/test/java/one/tesseract/devwallet/: ExampleUnitTest.kt
common/: Cargo.toml  cbindgen.toml  xcode_build_step.sh
common/src/: core.rs  error.rs  lib.rs  test_settings.rs  ui.rs
common/src/android/: application.rs  core.rs  error.rs  mod.rs  settings_provider.rs  test_settings.rs  test_settings_provider.rs
common/src/android/interop/: convertible.rs  desc.rs  error.rs  mod.rs  wrappable.rs
common/src/android/request/: mod.rs  substrate_account.rs  substrate_sign.rs  test_error.rs  test_sign.rs
common/src/android/settings/: key_settings.rs  key_settings_provider.rs  mod.rs  settings_provider.rs  test_settings.rs  test_settings_provider.rs
common/src/android/ui/: jui.rs  mod.rs  ui.rs
common/src/ios/: core.rs  error.rs  logger.rs  mod.rs  ui.rs
common/src/ios/request/: crequest.rs  mod.rs  substrate_account.rs  substrate_sign.rs  test_error.rs  test_sign.rs
common/src/ios/settings/: key_settings.rs  key_settings_provider.rs  mod.rs  provider.rs  test_settings.rs  test_settings_provider.rs
common/src/ios/ui/: mod.rs  sui.rs  ui.rs
common/src/request/: mod.rs  substrate_account.rs  substrate_sign.rs  test_error.rs  test_sign.rs
common/src/service/: mod.rs  substrate.rs  test.rs
common/src/service/substrate/: error.rs  mod.rs  parse.rs  service.rs  wallet.rs
common/src/settings/: key_settings.rs  mod.rs  provider.rs  test_settings.rs
gradle/wrapper/: gradle-wrapper.properties
ios/Common/: CoreProtocol.swift  Error.swift  HeaderView.swift  SUI.swift  SettingsSettings.swift
ios/Common/Entity/Request/: Request.swift  SubstrateAccount.swift  SubstrateSign.swift  TestError.swift  TestSign.swift
ios/Common/Entity/Settings/: KeySettings.swift
ios/Common/Rust/: Core.swift
ios/Common/Rust/Request/: CRequest.swift  CSubstrateAccount.swift  CSubstrateSign.swift  CTestError.swift  CTestSign.swift
ios/Common/Rust/Settings/: CKeySettings.swift  CTestSettings.swift  KeySettingsProvider.swift  TestSettingsProvider.swift
ios/Common/UI/: LabeledTextField.swift
ios/Developer Wallet/: ContentView.swift  Developer_WalletApp.swift  Info.plist  UI.swift
ios/Developer Wallet.xcodeproj/: project.pbxproj
ios/Developer Wallet/Entity/Settings/: TestSettings.swift
ios/Developer Wallet/Preview Content/: PreviewCore.swift  PreviewSettingsProvider.swift
ios/Developer Wallet/Rust/: Core.swift
ios/Developer Wallet/Rust/Settings/: CTestSettings.swift  SettingsProvider.swift  TestSettingsProvider.swift
ios/Developer Wallet/Settings/: TestSettingsView.swift
ios/Developer Wallet/UI/: HomeView.swift
ios/Developer Wallet/UI/Settings/: KeySettingsView.swift  KeySettingsViewModel.swift  TestSettingsView.swift  TestSettingsViewModel.swift
ios/Signer/: ActionViewController.swift  ContentView.swift  Info.plist  Signer.entitlements  SignerError.swift  SignerExtension.swift  SignerExtention.swift  SignerView.swift  SignerViewModel.swift  UI.swift
ios/Signer/UI/: SignerView.swift  SignerViewModel.swift
ios/Signer/UI/Request/: SubstrateAccountView.swift  SubstrateSignView.swift  TestErrorView.swift  TestSignView.swift
ios/Signer/UIExtension/: Bundle+UIExtension.swift  UIExtension.swift  UIExtensionController.swift
(+16 files in other folders)
