# Licensed under the Apache License, Version 2.0.

[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

thiserror = "1.0.31"
log = "0.4.17"

# futures = "0.3.21"
# lazy_static = "1.4.0"

configparser = "3.0.2"


#tesseract = { path = "../../Tesseract.rs/tesseract", features = ["service"] }
#tesseract-protocol-test = { path = "../../Tesseract.rs/protocols/test", features = ["service"] }
tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["service"]}
tesseract-protocol-test = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["service"]}

[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"
jni = "0.20.0"
jni_fn = "0.1.0"

interop_android = { path = "../../Tesseract.android/rust/interop" }
tesseract_ipc_android = { path = "../../Tesseract.android/rust/ipc", features = ["service"] }

[target.'cfg(target_os = "ios")'.dependencies]
stderrlog = "0.5.4"

tesseract_utils = { git = "https://github.com/tesseract-one/Tesseract.swift", branch = "master" }
tesseract_service = { git = "https://github.com/tesseract-one/Tesseract.swift", branch = "master" }

[build-dependencies]
cbindgen = "0.24"

[lib]
#[target.'cfg(target_os = "android")'.lib]
crate_type = ["cdylib", "staticlib"]
