# Licensed under the Apache License, Version 2.0.

[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
substrate = [
    "dep:subxt", "dep:subxt-signer",
    "dep:scale-info", "dep:serde", "dep:serde_json",
    "dep:tesseract-protocol-substrate"
]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
errorcon = "0.1"

#logger
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }

configparser = "3.0"

tesseract-one = { version = "0.5", features = ["service"] }
tesseract-protocol-test = { version = "0.5", features = ["service"] }
tesseract-protocol-substrate = { version = "0.5", features = ["service"], optional = true }

subxt = { version = "0.32", optional = true }
subxt-signer = { version = "0.32", features = ["subxt"], optional = true }
scale-info = { version = "*", optional = true }
serde = { version = "*", optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.20"
jni_fn = "0.1"

crabdroid = "0.3"
tesseract-android = { version = "0.5", features = ["service"] }

[target.'cfg(target_os = "ios")'.dependencies]
stderrlog = "0.5"

#tesseract-swift-utils = { path = "../../Tesseract.swift/Rust/utils" }
#tesseract-swift-transports = { path = "../../Tesseract.swift/Rust/transports", features = ["service"]}

[build-dependencies]
cbindgen = "0.26"

[lib]
#[target.'cfg(target_os = "android")'.lib]
crate_type = ["cdylib", "staticlib"]
